<?xml version="1.0"?>
<package>
  <name>rosjava</name>
  <version>0.3.0</version>
  <description>
    This is a meta package for the official rosjava repositories.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/rosjava</url>
  <url type="repository">http://www.github.com/rosjava/rosjava</url>
  <url type="bugtracker">http://www.github.com/rosjava/rosjava/issues</url>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
  <run_depend>genjava</run_depend>
  <run_depend>rosjava_test_msgs</run_depend>
  <run_depend>rosjava_messages</run_depend>
  <run_depend>rosjava_core</run_depend>
  <run_depend>rosjava_extras</run_depend>
  <run_depend>zeroconf_jmdns_suite</run_depend>

  <export>
    <metapackage/>
  </export>
</package>

